--- a/frontend/src/components/Barra/Barra.css
+++ b/frontend/src/components/Barra/Barra.css
@@ -1,4 +1,5 @@
 .menu {
+  height: 90px;
   padding: 10px 20px !important;
   background-color: var(--cor-secundaria);
   -webkit-box-shadow: 0px 0px 21px 5px rgba(0, 0, 0, 0.2);
